fixed whitespace 91 vs 90

--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -12,6 +12,7 @@
   right: 0
   background: black
   color: white
+  max-height: 100px
 
 // main header (scrollable sticky)
 .header-sticky
