--- a/src/sass/components/_mobile-navi.sass
+++ b/src/sass/components/_mobile-navi.sass
@@ -59,6 +59,7 @@
       &:hover, &.is-active, &.is-opened
         color: $colorPrimary
     li ul
+      // toggable with jquery
       display: none
       // second level
       padding-left: 0
@@ -68,6 +69,7 @@
         font-size: 14px
         color: $fontColor
         font-weight: 600
+        transition: background .25s $ease
         &:last-child
           border-bottom: 0
         &::after
@@ -79,10 +81,11 @@
           background: svg-load('../icons/arrow-menu-second-lvl.svg') no-repeat center
           size: 7px 10px
           background-size: contain
-          transition: transform .25s $ease
-      a
+          // transition: transform .25s $ease
         &:hover
-          color: white
+          background: $colorPrimaryHover
+          a
+            color: $fontColor
 
   &__subscription
     margin-top: 60px
